--- a/beta_srvparts/style/style.css
+++ b/beta_srvparts/style/style.css
@@ -7,7 +7,6 @@
          url('../fonts/cursive_standard_bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'cursive_standardregular';
@@ -15,8 +14,15 @@
          url('../fonts/cursive_standard-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
+@font-face {
+    font-family: 'PRISTINA';
+    src: url('../fonts/PRISTINA.eot');
+    src: local('☺'), url('../fonts/PRISTINA.woff') format('woff'), url('../fonts/PRISTINA.ttf') format('truetype'), url('../fonts/PRISTINA.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 /*  ==========================================================================
     MISC
@@ -44,13 +50,13 @@
             text-decoration: none;
             outline: none;
         }
-        .title{
-            text-align: center;
-            text-transform: uppercase;
-            margin: 0 0 50px;
-            font-size: 40px;
-            color: #013264;
-        }
+        .title {
+		    color: #013264;
+		    font-family: "PRISTINA";
+		    font-size: 60px;
+		    margin: 0 0 50px;
+		    text-align: center;
+		}
         .form-group{
             width: 100%;
             margin-bottom: 20px;
@@ -84,8 +90,14 @@
             background: #333;
         }
         .info-box{
-            font-size: 16px;
+            font-size: 21px;
             margin-bottom: 30px;
+        }
+        .info-box a {
+            color: #FFB401;
+        }
+        .info-box a:hover{
+            color: #333;
         }
 
 /*  ==========================================================================
@@ -106,7 +118,7 @@
             left: 0;
             top: 0;
             z-index: -1;
-            background: url(../img/header-bg.png) no-repeat left top / cover;
+            background: url(../img/black-striped-bg.png) no-repeat left top / cover;
         }
         .head{
             width: 100%;
@@ -115,7 +127,7 @@
             padding: 30px 0;
         }
         .logo{
-            background: #FFB401;
+            /*background: #FFB401;*/
             width: 100%;
             padding: 20px 10px;
             line-height: 1.4;
@@ -151,10 +163,10 @@
         }
         .header-sidebar li i{
             float: left;
-            width: 30px;
+            width: 40px;
             text-align: center;
             color: #fff;
-            font-size: 18px;
+            font-size: 24px;
             /*margin-top: 5px;*/
             display: inline-block;
             vertical-align: top;
@@ -168,12 +180,14 @@
             float: left;
             margin-right: 5px;
             vertical-align: top;
+            font-size: 16px;
+            width: 100%;
         }
         .header-sidebar li .info-side p{
             margin: 0;
             color: #fff;
-            font-size: 14px;
-            font-weight: bold;
+            font-size: 18px;
+            font-weight: 500;
             float: left;
         }
         .navigation{
@@ -265,7 +279,7 @@
         .product-info p{
             letter-spacing: 0.5px;
             line-height: 1.7;
-            margin: 0;
+            /*margin: 0;*/
         }
 
 /*  ==========================================================================
@@ -297,10 +311,13 @@
             line-height: 1.5;
             text-transform: uppercase;
         }
-        .cursive-text{
-            font-family: 'cursive_standardregular';
-            text-transform: none;
-        }
+        .cursive-text {
+		    display: inline-block;
+		    font-family: 'PRISTINA';
+		    line-height: 100px;
+		    margin-top: 100px;
+		    text-transform: none;
+		}
         .distributor-logo{
             margin-bottom: 15px;
         }
@@ -317,7 +334,7 @@
         }
         .about-section iframe{
             width: 100%;
-            height: 350px;
+            height: 477px;
         }
         .feature-list{
             list-style: none;
@@ -352,10 +369,28 @@
         .feature-list li .feature-info h4{
             margin-top: 0;
         }
+        .feature-list li .feature-info h4 a{
+            color: #333;
+        }
+        .feature-list li:hover .feature-info h4 a{
+            color: #FFB401;
+        }
         .feature-list li .feature-info p{
             letter-spacing: 0.5px;
             line-height: 1.7;
         }
+        .video-section .embed-responsive{
+            width: 100%;
+            margin:  0% 1% 1%;
+            float: left;
+        }
+        .about-section .video-section iframe{
+            height: 150px;
+            margin: 0 0 12px;
+        }
+        .embed-responsive.embed-responsive-16by9:last-child iframe {
+		    margin-bottom: 0;
+		}
 
 /*  ==========================================================================
     Contact Section
@@ -382,6 +417,12 @@
         .footer p{
             color: #fff;
             margin: 0;
+        }
+        .footer p a{
+            color: #fff;
+        }
+        .footer p a:hover{
+            color: #FFB401;
         }
 
 /*  ==========================================================================
@@ -414,6 +455,11 @@
             }
             .about-section{
                 padding: 60px 0;
+            }
+            .video-section{
+                display: inline-block;
+                width: 100%;
+                margin-top:30px; 
             }
         }
         @media screen and (min-width: 767px){
@@ -483,5 +529,14 @@
             }
             .nav-btn.active span:nth-child(2){
                 display: none;
+            }
+        }
+        @media screen and (max-width: 480px){
+            .video-section{
+                margin-top: 1%;
+            }
+            .video-section .embed-responsive{
+                width: 100%;
+                margin: 1% 0%;
             }
         }
